--- a/pages/card.html
+++ b/pages/card.html
@@ -19,10 +19,21 @@
 
   <main>
 
-    <div class="favourite">
+     <!-- <div class="favourite">
         <img src="/img/shopocat.svg" alt="">
         <h2>В корзине пока нет товаров</h2>
         <p>Начните с подборок на главной странице или найдите нужный товар через поиск</p>
+    </div>  -->
+
+    <div class="cart_item">
+
+      <div class="right"></div>
+      <div class="left">
+        <h2 class="total">1 650 0</h2>
+        <p>Итого товаров: <span>0</span></p>
+        <p>Итого скидки:  <span>0</span>сум</p>
+        <button>Оформить</button>
+      </div>
     </div>
   </main>
 
