--- a/pages/fav.html
+++ b/pages/fav.html
@@ -35,6 +35,7 @@
 
 
 
-<!-- <script type="module" src="/modules/script.js"></script> -->
+<script type="module" src="/modules/fav.js"></script>
+
 </body>
 </html>
