--- a/pages/fav.html
+++ b/pages/fav.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet"> 
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="/scss/style.scss">
     <link rel="stylesheet" href="/scss/header.scss">
   
@@ -16,18 +17,18 @@
     
   <header class="h2"></header>
 
-
-  <section class="smth">
-    <div class="cart_place"></div>
+<main>
+  <div class="smth">
+    <!-- <div class="cart_place"></div>
     <div class="favourite">
         <img src="/img/heart.svg" alt="">
         <h2>Добавьте то, что понравилось</h2>
         <p>Перейдите на главную страницу и нажмите на ♡ в товаре
             На главную</p>
-    </div>
-  </section>
+    </div> -->
+  </div>
 
-
+</main>
 
 
   <footer class="f2"></footer>
