--- a/pages/id.html
+++ b/pages/id.html
@@ -34,8 +34,8 @@
             <hr>
             <div class="discrip"></div>
             <div class="btnn">
-                <button>Добавить в корзину</button>
-                <button>Добавить в избранное </button>
+                <button class="card">Добавить в корзину</button>
+                <button class="like">Добавить в избранное </button>
             </div>
         </div>
     </div>
